# equipment_cyg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
equipment_cyg/controller/: controller.py  help_functions.py  host_controller.py  queue_handler.py  secs_gem.conf  socket_func.py
equipment_cyg/product/ceribell/: ceribell.conf  ceribell.py  ceribell_manual.xlsx
equipment_cyg/product/haimosic/: haimosic_manual.xlsx  haimosic_manual_formal.xlsx
equipment_cyg/product/haimosic/magazine_to_transfer/: cyg_alarm.csv  magazine_to_transfer.json  magazine_to_transfer.py
equipment_cyg/product/haimosic/microscope_inspection/: cyg_alarm.csv  microscope_inspection.json  microscope_inspection.py
equipment_cyg/product/haimosic/transfer_to_magazine/: transfer_to_magazine.json  transfer_to_magazine.py
equipment_cyg/product/haimosic/uploading/: cyg_alarm.csv  uploading.json  uploading.py
equipment_cyg/product/semikron/: semikron.conf  semikron.py  semikron_manual.xlsx
equipment_cyg/product/semikron_line/: semikron_line.json  semikron_line.py  semikron_line_manual.xlsx
equipment_cyg/product/smk_cutting/: smk_cutting.conf  smk_cutting.py  smk_cutting_manual.xlsx
equipment_cyg/product/sputter/: cyg_alarm.csv  sputter.conf  sputter.py  sputter_manual.xlsx
equipment_cyg/product/tong_fu_wei/: tong_fu_wei.py  通富微_手册整理-20240801.xlsx
equipment_cyg/product/zhing_xin_hpd/: zhong_xin_hpd_manual.xlsx
equipment_cyg/product/zhing_xin_hpd/hpd_2010/: hpd_2010.json  hpd_2010.py
equipment_cyg/product/zhing_xin_hpd/hpd_2070/: hpd_2070.json  (+1 more)
equipment_cyg/product/zhong_che_yi_xing/: zhong_che_yi_xing.conf  zhong_che_yi_xing.py  zhong_che_yi_xing_manual.xlsx  中车宜兴手册整理-20240905.xlsx  中车宜兴手册整理-20240924.xlsx
equipment_cyg/product/zhong_che_zhu_zhou/: zhong_che_zhu_zhou.conf  zhong_che_zhu_zhou.py  zhong_che_zhu_zhou_manual.xlsx  zhong_che_zhu_zhou_temp.py  zhong_che_zhu_zhou_temp_manual.xlsx
equipment_cyg/product/zhong_xin_scan/: cyg_alarm.csv  zhong_xin_scan.conf  zhong_xin_scan.py  zhong_xin_scan_manual.xlsx
equipment_cyg/utils/airtable/: airtable.py
equipment_cyg/utils/plc/: exception.py  plc_inovance.py  tag_communication.py  tag_type_enum.py
equipment_cyg/utils/socket/: socket_client.py  socket_server_asyncio.py
(+6 files in other folders)
