[tool.poetry]
name = "equipment_cyg"
version = "2.0.0"
description = ""
repository = "https://github.com/ChangYuan-Semiconductor-Equipment/equipment_cyg.git"
homepage = "https://github.com/ChangYuan-Semiconductor-Equipment/equipment_cyg.git"
authors = ["WeiLiu <183074632@qq.com>"]
readme = "README.md"
packages = [{include = "equipment_cyg"},]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
secsgem_cyg="^1.0.2"
pyairtable = "^2.3.3"
pillow = "^10.4.0"
cffi = "^1.17.0"
pythonnet = "^3.0.3"
suds-community = "^1.2.0"
inovance-tag-cyg = "^0.2.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
socket-cyg = "^0.1.4"


[tool.poetry.group.dev.dependencies]
secsgem_cyg = { git = "https://github.com/ChangYuan-Semiconductor-Equipment/secsgem_cyg.git", branch = "main" }


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
